# GNNModel

./: model_gnn.py  pyproject.toml
.github/workflows/: stale.yml
models/: models.py
module/: spark.py
modules/: spark_module.py
run/: run.py
test/: test.ipynb
