[tool.poetry]
name = "GNNModel"
version = "0.1.0"
description = ""
authors = ["yanapat1 <yanapat.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
pyspark = "^3.5.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
